<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/pt.it.esoares.android.olsrdeployer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.it.esoares.android.olsrdeployer.Adhoc$PlaceholderFragment" >

    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        grid:columnCount="2"
        grid:rowCount="6" >

        <TextView
            android:id="@+id/txt_constate"
            android:text="@string/txt_connection_state" />

        <TextView
            android:id="@+id/txt_Connected_State"
            android:layout_toEndOf="@id/txt_constate"
            android:gravity="start"
            android:text="@string/txt_connection_disconnected"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_networkname"
            grid:layout_gravity="start"
            android:text="@string/txt_network_name" />

        <TextView
            android:id="@+id/txt_Network_Name"
            grid:layout_gravity="start" />

        <TextView
            grid:layout_gravity="start"
            grid:layout_row="2"
            android:text="@string/txt_frequency" />

        <TextView
            android:id="@+id/txt_Frequency"
            grid:layout_gravity="start" />

        <TextView
            grid:layout_gravity="start"
            android:text="@string/txt_protection" />

        <TextView
            android:id="@+id/txt_Protection"
            grid:layout_gravity="start" />

        <TextView
            grid:layout_gravity="start"
            android:text="@string/txt_password" />

        <TextView
            android:id="@+id/txt_Password"
            grid:layout_gravity="start"
            android:text="@string/txt_protection_none" />

        <TextView
            grid:layout_gravity="start"
            android:text="@string/txt_ip" />

        <TextView
            android:id="@+id/txt_IP"
            grid:layout_gravity="start" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/button_start_state" />

</RelativeLayout>